# nekro-agent-for-windows

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  LICENSE  MANUAL_TEST_CHECKLIST.md  PROJECT_SCAN_REPORT.md  README.md  build.bat  build.spec  installer.iss  main.py  pyproject.toml  requirements.txt
.cursor/rules/: project.mdc
core/: app_updater.py  autostart.py  backend_base.py  backend_factory.py  config_manager.py  daemon_bridge.py  hyperv_backend.py  hyperv_manager.py  launcher_daemon.py  mirror_config.py  port_utils.py  powershell.py  update_runner.py  wsl_manager.py
core/wsl/: __init__.py  constants.py  deploy.py  discovery.py  environment.py  images.py  manager.py  monitor.py  runtime.py  shell.py  update.py
data/: docker-compose_with_napcat.yml  docker-compose_withnot_napcat.yml  env  update_nekro_agent.json
launcher_data/: docker-compose_with_napcat.yml  docker-compose_withnot_napcat.yml  update_nekro_agent.json
public/: index.html
scripts/: lint.py  probe_docker_mirrors.sh
tests/: test_app_updater.py  test_config_manager.py  test_daemon_bridge.py  test_launcher_daemon.py  test_port_utils.py  test_ui_fixes.py  test_wsl_discovery.py  test_wsl_images.py  test_wsl_install.py  test_wsl_monitor_deploy.py  test_wsl_update_daemon.py
ui/: first_run_dialog.py  main_window.py  migration_dialog.py  splash.py  styles.py  update_dialog.py  webview_widget.py  widgets.py
ui/pages/: __init__.py  browser_page.py  files_page.py  home_page.py  images_page.py  logs_page.py  settings_page.py
