[project]
name = "nekro-agent-for-windows"
version = "1.3.0"
description = "Windows launcher and deployment tool for Nekro Agent"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "qtwebview2>=0.4.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]
