[project]
name = "nekro-agent-for-windows"
version = "1.3.0"
description = "Windows launcher and deployment tool for Nekro Agent"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "qtwebview2>=0.4.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "poethepoet>=0.32.0",
    "pyright>=1.1.390",
]

[tool.poe.tasks]
lint = { cmd = "python scripts/lint.py", help = "Run compile, tests, and project lint checks" }

[tool.pyright]
include = [
    "main.py",
    "core",
    "ui",
    "tests",
    "scripts",
]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportArgumentType = "none"
